--- a/index.html
+++ b/index.html
@@ -5,68 +5,126 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!--GOOGLE FONT POPPINS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <!--SECTION 1 CONTAINING THE FIRST TOP PART-->
     <section class="top container" >
         <div class="half_width">
-            <h1><span class="blue_text">EAT</span> HEALTHY 
+            <h1 class="heading_one"><span class="blue_text">EAT</span> HEALTHY 
                 <br> <span class="blue_text">LIVE</span> HEALTHY 
                 <!-- <br> <span class="blue_text">STAY</span> HAPPY</h1> --></h1>
             <p class="paragrph_text">Eat healthy and live healthy’ is one of the essential requirements for long life. Unfortunately, today’s world has been adapted to a system of consumption of foods which has several adverse effects on health.</p>
-            <a href="" class="button">Order Food</a>
+            <a href="https://www.foodpanda.com.bd/" target="_blank" class="button">Order Food</a>
         </div>
         <div class="half_width">
-            <img class="top_img" src="images/model1.png" alt="" height="500px" width="500px">
+            <img class="top_img" src="images/model1.png" alt="Banner Model Image" height="500px" width="500px">
         </div>
     </section>
     <!--SECTION 2 CONTAINING THE ABOUT ME PART-->
     <section class="about container">
         <div class="half_width">
-            <img src="images/model2.png" alt="">
+            <img src="images/model2.png" alt="Cooking Model Image">
         </div>
 
         <div class="half_width">
             <h2 class="heading_two"><span class="blue_text">Healthy</span> Living</h2>
-            <p class="paragrph_text">Eat healthy and live healthy’ is one of the essential requirements for long life. Unfortunately, today’s world has been adapted to a system of consumption of foods which has several adverse effects on health. Lifestyle changes has compelled us so much that one has so little time to really think what we are eating is right! Globalization and urbanization have greatly affected one’s eating habits and forced many people to consume fancy and high calorie fast foods, popularly known as ‘Junk foods’.</p>
-            <a href="" class="button">Contact Me</a>
+            <p class="paragrph_text">A healthy lifestyle is important for everyone. When we look after our physical health, we feel better too – fitter, more relaxed and better able to cope with things. This is especially important when you have a mental illness. There are lots of ways of being healthy that feel good as well as doing you good. 'Healthy living’ means maintaining a healthy lifestyle and introducing habits that improve your health.</p>
+            <a href="https://www.programming-hero.com/" target="blank" class="button">Contact Me</a>
         </div>
     </section>
+    <!--SECTION 3 CONTAINING RECIPIES PART-->
     <section class="recipies">
         <div class="recipiestop">
-            <h2 class="heading_two">My Recipies</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, eos. Id aperiam maxime, assumenda placeat dolorem eum iure ad obcaecati, sit molestias, rerum tempore blanditiis adipisci ratione asperiores sed quisquam.</p>
+            <h2 class="heading_two"><span class="blue_text">Healthy</span> Recipies</h2>
+            <p> It can be difficult to change old habits, but there are steps you can take to become healthier. <br> An important first step is identifying less healthy habits</p>
         </div>
         <div class="container">
             <div class="one_third">
                 <div class="card">
                     <img src="images/Project Cover5.png" alt="">
-                    <h3>heading</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur esse sapiente quibusdam autem saepe facere quisquam commodi laudantium vitae, aliquam illum mollitia inventore suscipit sit, ullam aperiam, atque ipsa. Deserunt?</p>
+                    <h3>Fruit Salad</h3>
+                    <p>With the right quantity and type of fruits, a fruit salad can work wonders for you, for it will provide you with a power-packed dose of fibre, vitamins and antioxidants. At the same time, you will also get a wide range of health benefits, right from lower blood pressure levels to weight management.</p>
                 </div>
             </div>
 
             <div class="one_third">
                 <div class="card">
                     <img src="images/Project Cover8.png" alt="">
-                    <h3>heading</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur esse sapiente quibusdam autem saepe facere quisquam commodi laudantium vitae, aliquam illum mollitia inventore suscipit sit, ullam aperiam, atque ipsa. Deserunt?</p>
+                    <h3>Oats Pizza</h3>
+                    <p>Oats are one of the healthiest food grains out there. Also known by the scientific name Avena sativa, oat is commonly consumed as a breakfast cereal and is particularly recommended for those with high cholesterol or high blood pressure and blood sugar.</p>
                 </div>
             </div>
 
             <div class="one_third">
                 <div class="card">
                     <img src="images/Project Cover7.png" alt="">
-                    <h3>heading</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur esse sapiente quibusdam autem saepe facere quisquam commodi laudantium vitae, aliquam illum mollitia inventore suscipit sit, ullam aperiam, atque ipsa. Deserunt?</p>
+                    <h3>Fresh Vegitables</h3>
+                    <p>A diet rich in vegetables and fruits can lower blood pressure, reduce the risk of heart disease and stroke, prevent some types of cancer, lower risk of eye and digestive problems, and have a positive effect upon blood sugar, which can help keep appetite in check.</p>
                 </div>
             </div>
 
         </div>
     </section>
+
+    <!--SECTION 4 SHOWING OFF FANS AND FOLLOWERS-->
+    <section class="showoff">
+        <div class="container">
+            <div class="one_third">
+                <h1 class="heading_one">700K</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="one_third">
+                <h1 class="heading_one">2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="one_third">
+                <h1 class="heading_one">100K</h1>
+                <p>Dribble Shot Likes</p>
+            </div>
+        </div>
+        <p class="paragrph_text">SUBSCRIVE TO OUR NEWS TELLER</p>
+        <div class="newsteller">
+            <input type="text" placeholder="Please enter your email">             
+            <a href="" class="button">SUBSCRIBE</a>
+        </div>
+    </section>
+    <!--SECTION 5 CONTAINING TOP FEEDBACK-->
+    <section class="feedback">
+        <h2 class="heading_two"><span class="blue_text">Feedback</span> Appreciation</h2>
+        <div class="container">
+            <div class="one third">
+                <div class="card">
+                    <img src="images/contributor1.png" alt="">
+                    <h2 class="heading_two">John Siam</h2>
+                    <p>The food qulity is really great. I loved their presentation. They are very polite. The tips they provide are very helpfull</p>
+                </div>
+            </div>
+            <div class="one third">
+                <div class="card">
+                    <img src="images/contributor2.png" alt="">
+                    <h2 class="heading_two">Dave Bose</h2>
+                    <p>The food qulity is really great. I loved their presentation. They are very polite. The tips they provide are very helpfull</p>
+                </div>
+            </div>
+            <div class="one third">
+                <div class="card">
+                    <img src="images/contibutor3.png" alt="">
+                    <h2 class="heading_two">Najmul Kabir</h2>
+                    <p>The food qulity is really great. I loved their presentation. They are very polite. The tips they provide are very helpfull</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!--FOOTER CODE-->
     <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ab totam quas mollitia ducimus numquam hic voluptas modi odio, doloremque illo dolore magnam? Molestias sint eum est quis ipsam corporis.
+        <h2 class="heading_two"><span class="blue_text">FOOD</span> NETWORK</h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy <br>&copy; Najmul Kabir</p>
     </footer>
 </body>
 </html>
